--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-maps": "^1.8.0",
+    "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
