--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-web": "~0.19.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "expo-screen-orientation": "~6.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
