--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-image-picker": "^7.0.2",
     "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
+    "react-native-multiple-select": "^0.5.12",
+    "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.2",
+    "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "~0.19.6",
     "uuid": "^9.0.1"
   },
