--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.0",
     "expo": "~49.0.15",
     "expo-location": "~16.1.0",
+    "expo-screen-orientation": "~6.0.6",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,8 +39,7 @@
     "react-native-vector-icons": "^10.0.2",
     "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "~0.19.6",
-    "uuid": "^9.0.1",
-    "expo-screen-orientation": "~6.0.6"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
