--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-vector-icons": "^10.0.2",
     "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "~0.19.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
