--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/native-stack": "^6.9.16",
     "axios": "^1.6.0",
     "expo": "~49.0.15",
+    "expo-checkbox": "^2.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-screen-orientation": "~6.0.6",
     "expo-status-bar": "~1.6.0",
@@ -39,8 +41,7 @@
     "react-native-vector-icons": "^10.0.2",
     "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "~0.19.6",
-    "uuid": "^9.0.1",
-    "expo-image-picker": "~14.3.2"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
