--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 .idea
+pages/.List.js.swp
 
 # dependencies
 node_modules/
