--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-image-picker": "^7.0.2",
     "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
