--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -32,13 +32,15 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-get-random-values": "^1.10.0",
+    "react-native-get-random-values": "~1.9.0",
     "react-native-image-picker": "^7.0.2",
     "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-multiple-select": "^0.5.12",
+    "react-native-paper": "^5.11.3",
+    "react-native-paper-dates": "^0.20.4",
     "react-native-picker-select": "^9.0.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
