--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-app-auth": "^7.1.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-get-random-values": "~1.9.0",
     "react-native-image-picker": "^7.0.2",
